--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "abby.html">Abby's Page</a></li>
-                <li><a href= "kripa.html">Kripa's Page</a></li>
+                <li><a href = "kripa.html">Kripa's page</a></li>
+                <li><a href = "abby.html">Abby's page</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
@@ -24,14 +24,14 @@
     </header>
     
     <main>
-        <h2>U.S. Parks</h2>
+        <h2> US Parks </h2>
         <img src = "yourPicHere" width="200" alt = "Image of your Topic here.">
 
         <h3>Top Three Reasons We picked Our Topic</h3>
         <ul>
-            <li>The pictures will be pretty.</li>
-            <li>We don't know much about U.S. parks and hope to learn more.</li>
-            <li>Finding photos will be easy.</li>
+            <li>We didn't know much about US Parks</li>
+            <li>We thought hte pictures would be pretty</li>
+            <li>It's easy to find pictures of US Parks</li>
         </ul>
     </main>
     
