--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h3>Top Three Reasons We picked Our Topic</h3>
         <ul>
             <li>We didn't know much about US Parks</li>
-            <li>We thought hte pictures would be pretty</li>
+            <li>We thought the pictures would be pretty</li>
             <li>It's easy to find pictures of US Parks</li>
         </ul>
     </main>
