--- a/kripa.html
+++ b/kripa.html
@@ -20,19 +20,19 @@
     </header>
 
     <main>
-        <img src= "/images/zion.jpeg" alt="">
+        <img src= "images/zion.jpeg" alt="">
         <!-- https://www.us-parks.com/zion-national-park.html -->
-        <img src= "/images/acadia.jpeg" alt="">
+        <img src= "images/acadia.jpeg" alt="">
         <!-- https://www.us-parks.com/acadia-national-park.html -->
-        <img src= "/images/yosemite.jpeg" alt="">
+        <img src= "images/yosemite.jpeg" alt="">
         <!-- https://www.us-parks.com/yosemite-national-park.html -->
-        <img src= "/images/death_valley.jpeg" alt="">
+        <img src= "images/death_valley.jpeg" alt="">
         <!-- https://www.us-parks.com/death-valley-national-park.html -->
-        <img src= "/images/sequoia.jpeg" alt="">
+        <img src= "images/sequoia.jpeg" alt="">
         <!-- https://www.us-parks.com/sequoia-and-kings-canyon-national-park.html -->
-        <img src= "/images/grand_canyon.jpeg" alt="">
+        <img src= "images/grand_canyon.jpeg" alt="">
         <!-- https://www.us-parks.com/grand-canyon-national-park.html -->
-        <img src= "/images/shenandoah.jpeg" alt="">
+        <img src= "images/shenandoah.jpeg" alt="">
         <!-- https://www.us-parks.com/shenandoah-national-park.html -->
     </main> 
 </body>
