--- a/abby.html
+++ b/abby.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/kripa.css">
+    <link rel="stylesheet" href="css/abby.css">
     <title>Document</title>
 </head>
 <body>
+    <a href="#main">Skip To Main Content</a>
     <header>
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "abby.html">Abby's Page</a></li>
                 <li><a href= "kripa.html">Kripa's Page</a></li>
+                <li><a href = "abby.html">Abby's Page</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
