--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="css/html5reset.css"> -->
-    <!-- <link rel="stylesheet" href="css/student1.css"> -->
-    <!-- <link rel="stylesheet" href="css/student2.css"> -->
-    <!-- <link rel="stylesheet" href="css/student3.css"> -->
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/kripa.css">
+    <link rel="stylesheet" href="css/abby.css">
     <title>Week 2 Discussion</title>
 </head>
 <body>
+    <a href="#main">Skip To Main Content</a>
     <header>
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "kripa.html">Kripa's page</a></li>
-                <li><a href = "abby.html">Abby's page</a></li>
+                <li><a href= "kripa.html">Kripa's Page</a></li>
+                <li><a href = "abby.html">Abby's Page</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
@@ -24,14 +24,20 @@
     </header>
     
     <main>
-        <h2> US Parks </h2>
-        <img src = "yourPicHere" width="200" alt = "Image of your Topic here.">
+        <h2>U.S. Parks</h2>
+        <img src = "images/grandcanyon.jpeg" width="200" alt = "Image of your Topic here.">
+
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
+
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
+
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
 
         <h3>Top Three Reasons We picked Our Topic</h3>
         <ul>
-            <li>We didn't know much about US Parks</li>
-            <li>We thought the pictures would be pretty</li>
-            <li>It's easy to find pictures of US Parks</li>
+            <li>The pictures will be pretty.</li>
+            <li>We don't know much about U.S. parks and hope to learn more.</li>
+            <li>Finding photos will be easy.</li>
         </ul>
     </main>
     
